test/bad/functions/return04.px

func f(x: Int): Bool def
    return x

f()
